src/App.scss
/* Fonts */
@import url('https://fonts.googleapis.com/css2?family=Edu+NSW+ACT+Foundation&family=Edu+VIC+WA+NT+Beginner:wght@500;600&family=Ubuntu&display=swap');

a, button, textarea, input {
  outline: none;
  text-decoration: none;
  border: none;
}

body {
  box-sizing: border-box;
  max-width: 100%;
  max-height: 100%;
}

/* Custom scrollbar */
::-webkit-scrollbar {
  width: 3px;
}

::-webkit-scrollbar-thumb {
  background: white;
  border-radius: 10px;
}

::-webkit-scrollbar-thumb:hover {
  background: #555;
}

::-webkit-scrollbar-track {
  background: transparent;
}

/* Background canvas */
.App {
  font-family: "Ubuntu", sans-serif;
  position: fixed;
  background: #3800a8;
  width: 100vw;
  height: 100vh;
}

/* Loader */
.loader {
  position: fixed;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}


#home, #projects, #contact, #certification, #thanks {
  display: flex;
  width: 100%;
  position: absolute;
  color: white;
  margin-top: 80px;
  align-items: center;
  justify-content: center;
}

/* Animations */
@keyframes projects_anim {
  0% {
    transform: scale(1.01);
  }
  50% {
    transform: scale(1);
  }
  100% {
    transform: scale(1.02);
  }
  
}

